<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- App -->
	
	<string name="app_name" translatable="false">Suzaku</string>
	<string name="player_service_name" translatable="false">Player Service</string>
	<string name="music_db_service_name" translatable="false">Music Database Service</string>
	
	<!-- Preference -->
	
	<string name="key_player_screen" translatable="false">playerScreen</string>
	<string name="key_status_bar" translatable="false">statusBar</string>
	<string name="key_tabs" translatable="false">tabs</string>
	<string name="key_language" translatable="false">language</string>
	
	<string name="key_group_compilations" translatable="false">groupCompilations</string>
	<string name="key_hidden_files" translatable="false">hiddenFiles</string>
	<string name="key_auto_scan" translatable="false">autoScan</string>
	<string name="key_music_folder" translatable="false">musicFolder</string>

	
	<!-- DEFAULT TRANSLATION -->
	
	<!-- Basics -->

	<string name="title">Title</string>
	<string name="artist">Artist</string>
	<string name="album">Album</string>
	<string name="album_artist">Album Artist</string>
	<string name="artwork">Artwork</string>
	<string name="composer">Composer</string>
	<string name="genre">Genre</string>
	<string name="track_no">Track No.</string>
	<string name="disc_no">Disc No.</string>
	<string name="year">Year</string>
	<string name="lyrics">Lyrics</string>
	<string name="playlist">Playlist</string>
	<string name="compilation">Compilation</string>
	<string name="comment">Comment</string>
	
	<string name="name">Name</string>

	<string name="sort">Sort</string>

	<string name="path">Path</string>
	<string name="bitrate">Bitrate</string>
	<string name="sample_rate">Sample rate</string>
	<string name="channels">Channels</string>
	<string name="length">Length</string>

	<!-- Title -->

	<string name="playlists">Playlists</string>
	<string name="artists">Artists</string>
	<string name="albums">Albums</string>
	<string name="songs">Songs</string>
	<string name="genres">Genres</string>

	<string name="select_playlist">Select Playlist</string>

	<!-- Menu -->

	<string name="shuffle">Shuffle</string>
	<string name="order_by">Order by</string>
	<string name="settings">Settings</string>
	<string name="scan">Scan</string>
	<string name="detail">Detail</string>
	<string name="file">File</string>
	<string name="add_to_playlist">Add to Playlist</string>
	<string name="add_to_queue">Add to Queue</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="create_new_playlist">Create New Playlist</string>
	<string name="save">Save</string>
	<string name="add_folder">Add Folder</string>
	
	<!-- Views -->
	
	<string name="no_data">No Data</string>
	<string name="sd_unmounted">SD card is not mounted</string>
	
	<string name="unknown_artist">Unknown Artist</string>
	<string name="unknown_album">Unknown Album</string>
	<string name="unknown_genre">Unknown Genre</string>
	<string name="compilations">Compilations</string>
	<string name="various_artists">V.A.</string>

	<string name="playing_list">Playing List</string>
	
	<string name="choose_from_gallery">Choose from Gallery</string>
	<string name="delete_artwork">Delete Artwork</string>
	<string name="undo_the_changes">Undo the Changes</string>
	
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="later">Later</string>
	<string name="all">All</string>

	<plurals name="num_songs">
		<item quantity="one">%1$d song</item>
		<item quantity="other">%1$d songs</item>
	</plurals>

	<plurals name="num_albums">
		<item quantity="one">%1$d album</item>
		<item quantity="other">%1$d albums</item>
	</plurals>

	<string name="mix">Mix</string>

	<string name="inner_storage">Inner storage</string>
	<string name="sd_card">SD card</string>

	<string name="sd_card_access">SD Card Access</string>

	<string name="slash">/</string>

	<!-- Accessibility -->

	<string name="open_drawer">Open Drawer</string>
	<string name="close_drawer">Close Drawer</string>

	<string name="play">Play</string>
	<string name="next">Next</string>
	<string name="previous">Previous</string>
	<string name="loop_mode">Loop Mode</string>
	<string name="shuffle_mode">Shuffle Mode</string>

	<string name="menu">Menu</string>
	<string name="clear">Clear</string>
	<string name="close">Close</string>

	<!-- Errors -->

	<string name="msg_added_to_playlist">Added to playlist.</string>
	<string name="warn_input_playlist_title">Input playlist title.</string>
	<string name="warn_title_already_exists">The title already exists.</string>

	<string name="msg_confirm_saving">Do you want to save the changes?</string>
	<string name="msg_saved_changes">Saved the changes.</string>
	<string name="cant_save_changes">Can\'t save the changes.</string>
	
	<string name="msg_scanning">Scanning…</string>
	<string name="msg_scanning_place">Scanning… (%1$s)</string>
	<string name="msg_scan_finished">Scan finished.</string>
	
	<string name="err_cant_play">Can\'t play \"%1$s\"</string>

	<string name="msg_get_sd_permission">To grant Suzaku permission to operate, choose the root directory of SD Card.</string>

	<string name="msg_now_loading">Now Loading…</string>
	<string name="msg_now_saving">Now Saving…</string>

	<!-- Preference -->

	<string name="ui">UI</string>
	<string name="library">Library</string>
	
	<string name="show_player_screen">Show Player Screen</string>
	<string name="summary_player_screen">Change screen when music start</string>
	<string name="show_status_bar">Show Status Bar</string>
	<string name="select_tabs">Select Tabs</string>
	<string name="language">Language</string>
	
	<string name="group_compilations">Group Compilations</string>
	<string name="show_hidden_files">Show Hidden Files</string>
	<string name="auto_scan">Auto Scan</string>
	<string name="select_folder">Select Folder</string>

	<!-- Notification -->

	<string name="channel_name">Suzaku</string>
	<string name="channel_description">Show playing track</string>
	
</resources>
