<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/white">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/spacing_small"
		android:orientation="vertical">

		<TextView
			android:id="@+id/title_label"
			android:text="@string/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:labelFor="@+id/title_edit"/>

		<EditText
			android:id="@+id/title_edit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:inputType="text"/>

		<TextView
			android:text="@string/artist"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:labelFor="@+id/artist_edit"/>

		<EditText
			android:id="@+id/artist_edit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:inputType="text"/>

		<TextView
			android:text="@string/album"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:labelFor="@+id/album_edit"/>

		<EditText
			android:id="@+id/album_edit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:inputType="text"/>

		<TextView
			android:text="@string/album_artist"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:labelFor="@+id/album_artist_edit"/>

		<EditText
			android:id="@+id/album_artist_edit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:inputType="text"/>

		<TextView
			android:text="@string/composer"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:labelFor="@+id/composer_edit"/>

		<EditText
			android:id="@+id/composer_edit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:inputType="text"/>

		<TextView
			android:text="@string/genre"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:labelFor="@+id/genre_edit"/>

		<EditText
			android:id="@+id/genre_edit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:inputType="text"/>

		<TextView
			android:text="@string/track_no"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<EditText
				android:id="@+id/track_num_edit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="@dimen/text_small"
				android:textColor="@color/black"
				android:ems="4"
				android:inputType="number"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="@dimen/text_small"
				android:textColor="@color/black"
				android:text="@string/slash"/>

			<EditText
				android:id="@+id/track_count_edit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="@dimen/text_small"
				android:textColor="@color/black"
				android:ems="4"
				android:inputType="number"/>
		</LinearLayout>

		<TextView
			android:text="@string/disc_no"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<EditText
				android:id="@+id/disc_num_edit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="@dimen/text_small"
				android:textColor="@color/black"
				android:ems="4"
				android:inputType="number"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="@dimen/text_small"
				android:textColor="@color/black"
				android:text="@string/slash"/>

			<EditText
				android:id="@+id/disc_count_edit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="@dimen/text_small"
				android:textColor="@color/black"
				android:ems="4"
				android:inputType="number"/>
		</LinearLayout>

		<TextView
			android:text="@string/year"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:labelFor="@+id/year_edit"/>

		<EditText
			android:id="@+id/year_edit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:inputType="number"/>

		<TextView
			android:text="@string/comment"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:labelFor="@+id/comment_edit"/>

		<EditText
			android:id="@+id/comment_edit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:inputType="textMultiLine"/>

		<CheckBox
			android:id="@+id/compilation_check"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/compilation"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"/>

	</LinearLayout>
</ScrollView>
