<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
	
	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/spacing_tiny"
		android:text="@string/name"
		android:textSize="@dimen/text_small"/>
	
	<EditText
		android:id="@+id/title_edit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="@dimen/text_large"
		android:inputType="text"/>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
		<Button
			style="@style/myButton"
			android:id="@+id/cancel_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/cancel"
			android:textSize="@dimen/text_small"/>
		
		<Button
			style="@style/myButton"
			android:id="@+id/ok_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/ok"
			android:textSize="@dimen/text_small"/>
		
	</LinearLayout>
    
</LinearLayout>
