<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="64dp">

	<FrameLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_centerInParent="true"
		android:gravity="center">

		<ImageView
			android:id="@+id/artwork_view"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:scaleType="centerCrop"
			android:src="@android:color/transparent"
			android:tint="@color/black_alpha"
			android:contentDescription="@string/artwork"/>

	</FrameLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:paddingTop="@dimen/spacing_tiny"
		android:paddingLeft="@dimen/spacing_tiny"
		android:orientation="vertical">

		<TextView
			style="@style/myEllipsizeEndText"
			android:id="@+id/track_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/white"/>
		
		<TextView
			style="@style/myEllipsizeEndText"
			android:id="@+id/album_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_tiny"
			android:textColor="@color/gray_light"/>
		
		<TextView
			style="@style/myEllipsizeEndText"
			android:id="@+id/artist_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_tiny"
			android:textColor="@color/gray_light"/>

	</LinearLayout>

	<ImageButton
		style="@style/myButton"
		android:id="@+id/close_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"
		android:padding="@dimen/spacing_tiny"
		android:src="@drawable/ic_close"
		android:contentDescription="@string/close"/>
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_toLeftOf="@id/close_button"
		android:orientation="horizontal">

		<ImageButton
			style="@style/myButton"
			android:id="@+id/prev_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/spacing_tiny"
			android:src="@drawable/ic_skip_prev"
			android:contentDescription="@string/previous"/>

		<ImageButton
			style="@style/myButton"
			android:id="@+id/play_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/spacing_tiny"
			android:contentDescription="@string/play"/>

		<ImageButton
			style="@style/myButton"
			android:id="@+id/next_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/spacing_tiny"
			android:src="@drawable/ic_skip_next"
			android:contentDescription="@string/next"/>

	</LinearLayout>

</RelativeLayout>
