<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/margin_small"
		android:orientation="vertical">

		<com.citrus.suzaku.SquareImageView
			android:id="@+id/artwork"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginTop="@dimen/margin_small"
			android:scaleType="fitCenter"
			custom:adjust="height"/>

		<TextView
			android:id="@+id/info"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"/>

		<Button
			android:id="@+id/gallery"
			android:text="@string/choose_from_gallery"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"/>

		<Button
			android:id="@+id/delete"
			android:text="@string/delete_artwork"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"/>

		<Button
			android:id="@+id/undo"
			android:text="@string/undo_the_changes"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/black"
			android:enabled="false"/>

	</LinearLayout>
</ScrollView>