<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/dock"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
	android:gravity="center"
	android:background="@color/black"
	android:orientation="horizontal">

	<ImageView
		android:id="@+id/dock_artwork"
		android:layout_width="@dimen/artwork_size"
		android:layout_height="@dimen/artwork_size"
		android:layout_margin="@dimen/margin_tiny"
		android:scaleType="fitCenter"/>

	<LinearLayout
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:orientation="vertical">

		<TextView
			style="@style/myEllipsizeEndText"
			android:id="@+id/dock_track"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/white"/>

		<TextView
			style="@style/myEllipsizeEndText"
			android:id="@+id/dock_album"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_micro"
			android:textColor="@color/gray_light"/>

		<TextView
			style="@style/myEllipsizeEndText"
			android:id="@+id/dock_artist"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_micro"
			android:textColor="@color/gray_light"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<ImageButton
			style="@style/myButton"
			android:id="@+id/dock_prevButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/margin_tiny"
			android:src="@drawable/ic_skip_prev"
			android:contentDescription="@string/previous"/>

		<ImageButton
			style="@style/myButton"
			android:id="@+id/dock_playButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/margin_tiny"
			android:contentDescription="@string/play"/>

		<ImageButton
			style="@style/myButton"
			android:id="@+id/dock_nextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/margin_tiny"
			android:src="@drawable/ic_skip_next"
			android:contentDescription="@string/next"/>

	</LinearLayout>

</LinearLayout>
