<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:padding="@dimen/margin_tiny">

	<FrameLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_centerInParent="true"
		android:gravity="center">

		<ImageView
			android:id="@+id/artwork"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:scaleType="centerCrop"
			android:tint="@color/black_alpha"/>

	</FrameLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:paddingTop="@dimen/margin_tiny"
		android:paddingLeft="@dimen/margin_tiny"
		android:orientation="vertical">

		<TextView
			style="@style/myEllipsizeEndText"
			android:id="@+id/track"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_small"
			android:textColor="@color/white"/>

		<TextView
			style="@style/myEllipsizeEndText"
			android:id="@+id/album"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_micro"
			android:textColor="@color/gray_light"/>

		<TextView
			style="@style/myEllipsizeEndText"
			android:id="@+id/artist"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/text_micro"
			android:textColor="@color/gray_light"/>

	</LinearLayout>
	
	<ImageButton
		android:id="@+id/contentButton"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@android:color/transparent"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:orientation="horizontal">

		<ImageButton
			style="@style/myButton"
			android:id="@+id/prevButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/margin_tiny"
			android:src="@drawable/ic_skip_prev"
			android:contentDescription="@string/previous"/>

		<ImageButton
			style="@style/myButton"
			android:id="@+id/playButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/margin_tiny"
			android:contentDescription="@string/play"/>

		<ImageButton
			style="@style/myButton"
			android:id="@+id/nextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/margin_tiny"
			android:src="@drawable/ic_skip_next"
			android:contentDescription="@string/next"/>

	</LinearLayout>

</RelativeLayout>
