<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_small"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_label"
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:labelFor="@+id/title_edit"/>

        <EditText
            android:id="@+id/title_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:inputType="text"/>

        <TextView
            android:id="@+id/title_sort_label"
            android:text="@string/sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:labelFor="@+id/title_sort_edit"/>

        <EditText
            android:id="@+id/title_sort_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:inputType="text"/>


        <TextView
            android:text="@string/artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:labelFor="@+id/album_edit"/>

        <EditText
            android:id="@+id/artist_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:inputType="text"/>

        <TextView
            android:text="@string/sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:labelFor="@+id/album_sort_edit"/>

        <EditText
            android:id="@+id/artist_sort_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:inputType="text"/>


        <TextView
            android:text="@string/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:labelFor="@+id/album_edit"/>

        <EditText
            android:id="@+id/album_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:inputType="text"/>

        <TextView
            android:text="@string/sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:labelFor="@+id/album_sort_edit"/>

        <EditText
            android:id="@+id/album_sort_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:inputType="text"/>


        <TextView
            android:text="@string/album_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:labelFor="@+id/album_artist_edit"/>

        <EditText
            android:id="@+id/album_artist_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:inputType="text"/>

        <TextView
            android:text="@string/sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:labelFor="@+id/album_artist_sort_edit"/>

        <EditText
            android:id="@+id/album_artist_sort_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textColor="@color/black"
            android:inputType="text"/>

    </LinearLayout>
</ScrollView>
